@@ -1,1 +1,1 @@
-LINBO 2.3.42-1
+LINBO 2.3.43-0
