@@ -1,3 +1,10 @@
+linuxmuster-linbo (2.3.43-0) babo62; urgency=low
+
+  * restore partition labels after sync (probably workaround for #102 & #106).
+  * fix status in linbo-remote -l (#105).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 13 Mar 2019 10:26:40 +0100
+
 linuxmuster-linbo (2.3.42-1) babo62; urgency=low
 
   * more init scripts fixes due to different linuxmuster versions.
